# python-training

./: OUTLINE.md  README.md  TOPICS.md  pyproject.toml
advanced/: README.md  data-model.md  notable-standard-libraries.md  notable-third-party-libraries.md  tooling.md
basic/: README.md  built-in-functions-and-types.md  differences.md  python-as-a-technology.md  syntax-and-data-structures.md  syntax-semantics-and-data-structures.md  type-system.md
