[tool.poetry]
name = "python-training"
version = "1.0.0"
description = "Collection of Python Training Materials"
authors = ["Drakeley, Graham <graham.drakeley@intel.com>"]
license = "Proprietary"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyterlab = "^4.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
